--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -57,65 +57,37 @@
                     </div>
                 </div>
               </p-panel>
-              
-        </div>
-        <div class="col-12 md:col-6 lg:col-2">
-            <p-panel styleClass="shadow-3 border-round-3xl">
-                <ng-template pTemplate="header">
-                    <div class="flex align-items-center justify-content-between">
-                        <span class="text-2xl font-bold">SOS</span>
-                        <img src="assets/images/sos.png" alt="overspeed" class="ml-2 w-3" />
-                    </div>
-                </ng-template>
-                <div class="p-1 border-round bg-red-500">
-                    <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
-                        <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">0</span>
-                    </div>   
-                </div>
-                <div class="text-right">
-                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
-                </div>
-            </p-panel>
         </div>
 
+        @for (panel of SOSALertOverSpeed; track $index) {
         <div class="col-12 md:col-6 lg:col-2">
             <p-panel styleClass="shadow-3 border-round-3xl">
                 <ng-template pTemplate="header">
                     <div class="flex align-items-center justify-content-between">
-                        <span class="text-2xl font-bold">Over Speed</span>
-                        <img src="assets/images/overspeed.png" alt="overspeed" class="ml-2 w-3" />
+                        <span class="text-2xl font-bold">{{ panel.title }}</span>
+                        <img [src]="panel.image" [alt]="panel.title" class="ml-2 w-3" />
                     </div>
                 </ng-template>
-                <div class="p-1 border-round bg-orange-500">
+                <div class="p-1 border-round" [ngClass]="panel.bgClass">
                     <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
-                        <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">0</span>
-                    </div>   
-                </div>
-                <div class="text-right">
-                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
-                </div>
-                
-            </p-panel>
-        </div>
-        <div class="col-12 md:col-6 lg:col-2">
-            <p-panel styleClass="shadow-3 border-round-3xl">
-                <ng-template pTemplate="header">
-                    <div class="flex align-items-center justify-content-between">
-                        <span class="text-2xl font-bold">Alert</span>
-                        <img src="assets/images/alert.png" alt="overspeed" class="ml-2 w-3" />
+                        <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">{{ panel.value }}</span>
                     </div>
-                </ng-template>
-                <div class="p-1 border-round bg-yellow-500">
-                    <div class="flex justify-content-center align-items-center py-5 md:py-4 sm:py-3">
-                        <span class="text-white font-bold text-7xl md:text-7xl sm:text-3xl">0</span>
-                    </div>   
                 </div>
                 <div class="text-right">
-                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
+                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"
+                        (click)="onInfoClick($event,panel,op)" (mouseenter)="panel?.title === 'Alert' && onInfoClick($event,panel,op)">
+                            <p-overlayPanel #op appendTo="body">    
+                                <app-generic-overlay
+                                [title]="panel.title" [data]="panel?.response" [fields]="panel?.fields ?? []"/>
+                            </p-overlayPanel>
+                    </i>
                 </div>
-                
             </p-panel>
         </div>
+        }
+          
+
+        
     </div>
 
 
