--- a/src/app/pages/main/dashboard/dashboard.component.html
+++ b/src/app/pages/main/dashboard/dashboard.component.html
@@ -8,7 +8,8 @@
                         <div class="mb-3" [ngClass]="vehicle.textColorClass + ' text-5xl'">{{ vehicle.count }}</div>
                         <div class="flex align-items-center justify-content-center"
                             [ngClass]="vehicle.bgColorClass + ' border-round'" style="width:5rem;height:5rem">
-                            <i class="pi pi-car" [ngClass]="vehicle.textColorClass + ' text-5xl'"></i>
+                        <ng-lottie  width="60px" height="60px" [options]="{ path: vehicle.lottiePath }" /> 
+                            <!-- <i class="pi pi-car" [ngClass]="vehicle.textColorClass + ' text-5xl'"></i> -->
                         </div>
                     </div>
                     <div class="flex justify-content-between mt-2">
@@ -27,8 +28,10 @@
             <p-panel styleClass="shadow-3 border-round-3xl">
                 <ng-template pTemplate="header">
                     <div class="flex align-items-center">
-                        <span class="text-3xl font-bold">Total Complaint Lodge</span>
-                        <img src="assets/images/complaints.png" alt="complaints" class="ml-3 w-1" />
+                        <span class="text-2xl font-bold">Total Complaint Lodge</span>
+                        <ng-lottie  width="40px" height="40px" [options]="{ path: '/assets/lottie/complaint.json' }" /> 
+
+                        <!-- <img src="assets/images/complaints.png" alt="complaints" class="ml-3" width="45px" /> -->
                     </div>
                     <!-- <span class="text-3xl font-bold" >Total Complaint Lodge</span> -->
                 </ng-template>
@@ -48,13 +51,15 @@
                                     <i class="pi" [ngClass]="stat.icon + ' text-' + stat.colorClass + '-500 text-5xl'"></i>
                                 </div>
                             </div>
-                            <div class="flex justify-content-between mt-4 align-items-center">
+                            <div class="flex justify-content-between mt-2 align-items-center">
                                 <div class="w-full border-round" [ngClass]="'bg-' + stat.colorClass + '-500'" style="height: 5px;">
                                 </div>
-                                <i class="pi pi-info-circle  ml-4 cursor-pointer font-bold text-xl text-primary-500"></i>
                             </div>
                         </div>
                     </div>
+                </div>
+                <div class="text-right">
+                    <i class="pi pi-info-circle mt-3 text-right cursor-pointer font-bold text-xl text-primary-500"></i>
                 </div>
               </p-panel>
         </div>
@@ -63,9 +68,10 @@
         <div class="col-12 md:col-6 lg:col-2">
             <p-panel styleClass="shadow-3 border-round-3xl">
                 <ng-template pTemplate="header">
-                    <div class="flex align-items-center justify-content-between">
+                    <div class="flex align-items-center">
                         <span class="text-2xl font-bold">{{ panel.title }}</span>
-                        <img [src]="panel.image" [alt]="panel.title" class="ml-2 w-3" />
+                        <ng-lottie  width="40px" height="40px" [options]="{ path: panel.lottiePath }" /> 
+                        <!-- <img [src]="panel.image" [alt]="panel.title" class="ml-2" style="width: 45px;" /> -->
                     </div>
                 </ng-template>
                 <div class="p-1 border-round" [ngClass]="panel.bgClass">
@@ -97,6 +103,7 @@
             <p-panel styleClass="shadow-3 border-round-3xl">
                 <ng-template pTemplate="header">
                     <span class="text-3xl font-bold" >Vehicle Type Wise Installation</span>
+                    <ng-lottie  width="65px" height="65px" [options]="{ path: '/assets/lottie/installation.json' }" /> 
                 </ng-template>
                 <ng-template pTemplate="icons">
                     <!-- <button class="p-panel-header-icon p-link mr-2">
@@ -111,7 +118,7 @@
                         </div>
                     </div>
                     <div class="col-12 md:col-6 lg:col-6">
-                        <div style="height: 558px;" class="p-5 overflow-auto">
+                        <div style="height: 575px;" class="p-5 overflow-auto">
                             @for (vehicle of vehicleInstallationTypes; track $index) {
                                 <div class="col-12 md:col-12 lg:col-12">
                                     <div class="card surface-300 shadow-3 flex border-round align-items-center justify-content-between p-4">
@@ -131,7 +138,11 @@
                 <div class="col-12 lg:col-4">
                     <p-panel styleClass="shadow-3 border-round-3xl">
                         <ng-template pTemplate="header">
-                            <span class="text-3xl font-bold" >Registered</span>
+                            <div class="flex align-items-center justify-content-between">
+                                <span class="text-3xl font-bold" >Registered</span>
+                                <ng-lottie  width="50px" height="50px" [options]="{ path: '/assets/lottie/complaint.json' }" /> 
+                                <!-- <img src="assets/images/register.png" alt="register" class="ml-3" width="45px" /> -->
+                            </div>
                         </ng-template>
                             @for (item of totalRegistration; track $index) {
                                 <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 border-round ' + item.bgColor">
@@ -139,6 +150,7 @@
                                         <div class="flex justify-content-between  pl-2 pr-2">
                                             <div class="flex align-items-center justify-content-center">
                                                 <div  [ngClass]="'text-green-500 text-white font-bold' + ' text-2xl'">{{item.key || 0}}</div>
+                                                <ng-lottie  width="40px" height="40px" [options]="{ path: item.lottiePath}" /> 
                                             </div>
                                             <div class="flex align-items-center justify-content-center">
                                                 <div class="text-green-500 text-white text-5xl ">{{item.value || 0}}</div>
@@ -156,6 +168,7 @@
                     <p-panel styleClass="shadow-3 border-round-3xl">
                         <ng-template pTemplate="header">
                             <span class="text-3xl font-bold" >Inventory</span>
+                            <ng-lottie  width="50px" height="50px" [options]="{ path: '/assets/lottie/warehouse.json' }" /> 
                         </ng-template>
                             @for (item of inventory; track $index) {
                                 <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 border-round ' + item.bgColor">
@@ -163,6 +176,7 @@
                                         <div class="flex justify-content-between  pl-2 pr-2">
                                             <div class="flex align-items-center justify-content-center">
                                                 <div  [ngClass]="'text-green-500 text-white font-bold' + ' text-2xl'">{{item.key}}</div>
+                                                <ng-lottie  width="40px" height="40px" [options]="{ path: item.lottiePath}" /> 
                                             </div>
                                             <div class="flex align-items-center justify-content-center">
                                                 <div class="text-green-500 text-white text-5xl ">{{item.value}}</div>
@@ -181,6 +195,7 @@
                     <p-panel styleClass="shadow-3 border-round-3xl">
                         <ng-template pTemplate="header">
                             <span class="text-3xl font-bold" >Renewal</span>
+                            <ng-lottie  width="50px" height="50px" [options]="{ path: '/assets/lottie/complaint.json' }" /> 
                         </ng-template>
                             @for (item of renewalStatus; track $index) {
                                 <div [ngClass]="'col-12 md:col-12 lg:col-12 mb-3 border-round ' + item.bgColor">
@@ -188,6 +203,7 @@
                                         <div class="flex justify-content-between  pl-2 pr-2">
                                             <div class="flex align-items-center justify-content-center">
                                                 <div  [ngClass]="'text-green-500 text-white font-bold' + ' text-2xl'">{{item.key}}</div>
+                                                <ng-lottie  width="40px" height="40px" [options]="{ path: item.lottiePath}" /> 
                                             </div>
                                             <div class="flex align-items-center justify-content-center">
                                                 <div class="text-green-500 text-white text-5xl ">{{item.value}}</div>
@@ -205,7 +221,7 @@
                     <div class="grid">
                         <div class="col-12 md:col-6 lg:col-12">
                             <div class="surface-card shadow-2 border-round">
-                                <div style="height: 400px;" leaflet (leafletMapReady)="onMapReady($event)"
+                                <div style="height: 425px;" leaflet (leafletMapReady)="onMapReady($event)"
                                     [leafletOptions]="leafletOptions">
                                 </div>
                             </div>
